--- a/switcheroni/app/src/main/res/layout/fragment_style.xml
+++ b/switcheroni/app/src/main/res/layout/fragment_style.xml
@@ -5,6 +5,7 @@
     android:id="@+id/rows"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:screenOrientation="portrait"
     tools:context=".styles.StyleFragment">
 
 
