--- a/switcheroni/app/src/main/res/layout/fragment_switcher_alt.xml
+++ b/switcheroni/app/src/main/res/layout/fragment_switcher_alt.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_alt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:screenOrientation="portrait"
@@ -12,8 +12,8 @@
         android:id="@+id/btn_picture"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/image_photo_picker_button"
         android:src="@drawable/ic_photo_image"
         android:text="@string/photo_or_image"
@@ -27,8 +27,8 @@
         android:id="@+id/btn_style"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/image_photo_picker_button"
         android:text="@string/styles"
         app:layout_constraintBottom_toTopOf="@+id/btn_redraw"
@@ -40,12 +40,12 @@
         android:id="@+id/btn_redraw"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/image_photo_picker_button"
         android:text="@string/convert"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_horizontal"
@@ -56,12 +56,13 @@
 
     <ImageView
         android:id="@+id/img_converted_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:src="@mipmap/ic_launcher_round"
-        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btn_picture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
